@@ -2,6 +2,7 @@ package com.jpeony.leetcode1.n0090;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.LinkedList;
 import java.util.List;
 
 /**
@@ -11,36 +12,34 @@ import java.util.List;
  * @author yihonglei
  */
 public class N90_SubsetsII {
-
-    static List<List<Integer>> result = new ArrayList<>();
-    static ArrayList<Integer> temp = new ArrayList<>();
-
     /**
      * 【回溯算法】
      * 时间复杂度：O(n×2^n)。一共 2^n 个状态，每种状态需要 O(n) 的时间来构造子集。
      * 空间复杂度：O(n)。渐进空间为存储子集的临时列表，n 为子集个数，所以空间复杂度为 O(n)。
      */
     private static List<List<Integer>> subsetsWithDup(int[] nums) {
+        List<List<Integer>> ans = new ArrayList<>();
+        LinkedList<Integer> path = new LinkedList<>();
         // 排序，底层基于快排实现
         Arrays.sort(nums);
-        backtracking(nums, 0);
-        return result;
+        backtracking(ans, path, nums, 0);
+        return ans;
     }
 
-    private static void backtracking(int[] nums, int startIndex) {
+    private static void backtracking(List<List<Integer>> ans, LinkedList<Integer> path, int[] nums, int startIndex) {
         // 结果收集
-        result.add(new ArrayList<>(temp));
+        ans.add(new ArrayList<>(path));
         // for 循环，循环结束为递归退出的条件
         for (int i = startIndex; i < nums.length; i++) {
             // 剪枝：对于相同元素，组成的子集重复排除
             if (i != startIndex && nums[i] == nums[i - 1]) {
                 continue;
             }
-            temp.add(nums[i]);
+            path.add(nums[i]);
             // 递归
-            backtracking(nums, i + 1);
+            backtracking(ans, path, nums, i + 1);
             // 回溯，已处理节点撤销
-            temp.remove(temp.size() - 1);
+            path.removeLast();
         }
     }
 
